[gd_scene load_steps=5 format=3 uid="uid://dfx5lihtn0by"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_68c6x"]
[ext_resource type="Texture2D" uid="uid://crysitwohkk41" path="res://Assets/sprites/ui/pngtree-tea-cup-tea-mountain-green-chinese-style-zen-tea-image_805332.jpg" id="2_uap85"]
[ext_resource type="PackedScene" uid="uid://dpjvexosl7hdp" path="res://Scenes/opções.tscn" id="3_jhdt5"]
[ext_resource type="AudioStream" uid="uid://cmh44bwauf7dp" path="res://Assets/audio/mainMenuTesteLoop.mp3" id="3_o0wvw"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_68c6x")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_uap85")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MainMenu" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Nome" type="Label" parent="CenterContainer/MainMenu"]
modulate = Color(0.380392, 0.403922, 0.203922, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 86
text = "Chá No Ar"
horizontal_alignment = 1

[node name="Começar" type="Button" parent="CenterContainer/MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Começar"

[node name="Continuar" type="Button" parent="CenterContainer/MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
disabled = true
text = "Continuar"

[node name="Opções" type="Button" parent="CenterContainer/MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Opções"

[node name="Créditos" type="Button" parent="CenterContainer/MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Créditos"

[node name="Sair" type="Button" parent="CenterContainer/MainMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Sair"

[node name="Opções" parent="CenterContainer" instance=ExtResource("3_jhdt5")]
visible = false
layout_mode = 2

[node name="Aviso" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/Aviso"]
modulate = Color(0.513726, 0.505882, 0.0823529, 1)
layout_mode = 2
text = "Atenção: Ao continuar, qualquer progresso será perdido"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Aviso"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Aceitar" type="Button" parent="CenterContainer/Aviso/HBoxContainer"]
layout_mode = 2
text = "Aceitar"

[node name="Voltar" type="Button" parent="CenterContainer/Aviso/HBoxContainer"]
layout_mode = 2
text = "Voltar"
icon_alignment = 1

[node name="Creditos" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -71.0
offset_right = 3.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Creditos"]
modulate = Color(0.529412, 0.490196, 0.109804, 1)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 35
text = "Artistas: Julia Teixeira, Marcela, Nico
Programação: Rafael Lima, Luciana, João Pedro
 e Igor Delfino
Roteiro: Joana, Lucas de Araújo
Som:Douglas Oliveira
Game Design: Christian
Gestão: Carlos Bravo"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
text_direction = 1

[node name="VoltarCreditos" type="Button" parent="Creditos"]
layout_mode = 2
text = "Voltar
"

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_o0wvw")
autoplay = true

[connection signal="pressed" from="CenterContainer/MainMenu/Começar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="CenterContainer/MainMenu/Continuar" to="." method="_on_continuar_pressed"]
[connection signal="pressed" from="CenterContainer/MainMenu/Opções" to="." method="_on_opções_pressed"]
[connection signal="pressed" from="CenterContainer/MainMenu/Opções" to="." method="troca_visibilidade" binds= ["CenterContainer/Opções", 1]]
[connection signal="pressed" from="CenterContainer/MainMenu/Créditos" to="." method="troca_visibilidade" binds= ["Creditos"]]
[connection signal="pressed" from="CenterContainer/MainMenu/Sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="CenterContainer/Aviso/HBoxContainer/Aceitar" to="." method="_on_aceitar_pressed"]
[connection signal="pressed" from="CenterContainer/Aviso/HBoxContainer/Voltar" to="." method="troca_visibilidade" binds= ["CenterContainer/Aviso"]]
[connection signal="pressed" from="Creditos/VoltarCreditos" to="." method="troca_visibilidade" binds= ["Creditos"]]
